Bug 96522 - [ANIMATION] Animation Spiral in does not work
Summary: [ANIMATION] Animation Spiral in does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords: bibisected, bisected, regression
: 96526 96528 96529 96537 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-15 19:54 UTC by Olivier Hallot
Modified: 2016-09-18 14:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
file containing object with spiral in animation (10.56 KB, application/vnd.oasis.opendocument.presentation)
2015-12-15 19:54 UTC, Olivier Hallot
Details
potential fix (4.79 KB, patch)
2015-12-23 11:17 UTC, Noel Grandin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2015-12-15 19:54:32 UTC
Created attachment 121323 [details]
file containing  object with spiral in animation

In the sample file attached, the animation spiral in does not work.
Comment 1 raal 2015-12-21 22:42:13 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: dab2582f05979cd99a5937cb95a387cfed70bb8d
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time:
2015-12-17_10:07:59

works with Version: 4.3.0.0.alpha1+
Comment 2 raal 2015-12-22 12:10:26 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one? Thanks
 f8251726edc3e2b1d08e3bc6b11b247e99959183 is the first bad commit
commit f8251726edc3e2b1d08e3bc6b11b247e99959183
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Oct 29 23:56:32 2015 -0700

    source c7e8f21a538c409abe70b90d7bba38386e90a876

    source c7e8f21a538c409abe70b90d7bba38386e90a876

author	Noel Grandin <noel@peralex.com>	2015-10-29 10:40:04 (GMT)
committer	Noel Grandin <noelgrandin@gmail.com>	2015-10-30 05:58:41 (GMT)
commit c7e8f21a538c409abe70b90d7bba38386e90a876 (patch)
loplugin:unusedmethods	
	
	
	/bibisect-win32-5.1
$ git bisect log
# bad: [a2ca6bb70db1ba8f306a617d92070351d9a3a624] source 8b5182155b6d35a1be64d37136584e30ea6a6ef8
# good: [c1efd324c6ad448ac9edb030dc9738b9e6899e4d] source ab465b90f6c6da5595393a0ba73f33a1e71a2b65
git bisect start 'a2ca6bb70db1ba8f306a617d92070351d9a3a624' 'c1efd324c6ad448ac9edb030dc9738b9e6899e4d'
# good: [1e602523875e23a7969d8c28276c82311eb2fa74] source 5b8e4f3d676eb0a026ce1eb4c1df2ec6e0736cb1
git bisect good 1e602523875e23a7969d8c28276c82311eb2fa74
# good: [1e602523875e23a7969d8c28276c82311eb2fa74] source 5b8e4f3d676eb0a026ce1eb4c1df2ec6e0736cb1
git bisect good 1e602523875e23a7969d8c28276c82311eb2fa74
# good: [e488633c49c1a6da848fc37cdc85da06b487baf6] source d30f5bc3e65463f28c3087acad6f88e12d60e53b
git bisect good e488633c49c1a6da848fc37cdc85da06b487baf6
# good: [e488633c49c1a6da848fc37cdc85da06b487baf6] source d30f5bc3e65463f28c3087acad6f88e12d60e53b
git bisect good e488633c49c1a6da848fc37cdc85da06b487baf6
# bad: [5be8d4c35d2d475e2afa4c72641aad7f7d9d9330] source eafd3ee3f01bceef0eb3327be3139a8eee2a2b2e
git bisect bad 5be8d4c35d2d475e2afa4c72641aad7f7d9d9330
# bad: [5be8d4c35d2d475e2afa4c72641aad7f7d9d9330] source eafd3ee3f01bceef0eb3327be3139a8eee2a2b2e
git bisect bad 5be8d4c35d2d475e2afa4c72641aad7f7d9d9330
# good: [33efeb166ac63c3689538820d2925a673e2fa4a3] source 04967cba8e71e178915068e237a96e32a8cb3e9e
git bisect good 33efeb166ac63c3689538820d2925a673e2fa4a3
# bad: [b1a678769cebf8b26baa8d5802f11b5988c740e0] source 872f449377f24c97877ae3fe9c35549ef3c0c531
git bisect bad b1a678769cebf8b26baa8d5802f11b5988c740e0
# good: [1afc038655693cf113a5e10e462501726c3d18e5] source 446f17f6c1f98b17ceb6750f5dc67a27330d1351
git bisect good 1afc038655693cf113a5e10e462501726c3d18e5
# good: [75ab6ed4be050c93b2691593ce3f4a931dcba4be] source 980cf4ad2ce25bd549d745208ca926bd5c205921
git bisect good 75ab6ed4be050c93b2691593ce3f4a931dcba4be
# bad: [0d090d8e7400bb5ec7a3f58906bd308768ecba32] source 8be504b6239d34963cb44411d0b3502ac23aeeb2
git bisect bad 0d090d8e7400bb5ec7a3f58906bd308768ecba32
# good: [4d9e5d7555f6e14e2f7256fe7aa5a6e2d0c660ca] source ee73a6c5573391f5f8e2f100f8392c34d6c61344
git bisect good 4d9e5d7555f6e14e2f7256fe7aa5a6e2d0c660ca
# bad: [e67778c6dc73fe6eef2d06c56a4d6f8c202049e2] source 26d5407a5f653e55ec9255117760886bcec4fe15
git bisect bad e67778c6dc73fe6eef2d06c56a4d6f8c202049e2
# good: [66a0d22d7f6bca9a532768b4d34e89921fd9dd2a] source 3a88f8de3cc6175907c584b848dd06391ee9d8fa
git bisect good 66a0d22d7f6bca9a532768b4d34e89921fd9dd2a
# good: [d15c23c6dc1ae9066d24cf827050babcae34df76] source 3c2c5ef575eec07617cd759985f4ab5fb8732eff
git bisect good d15c23c6dc1ae9066d24cf827050babcae34df76
# bad: [f8251726edc3e2b1d08e3bc6b11b247e99959183] source c7e8f21a538c409abe70b90d7bba38386e90a876
git bisect bad f8251726edc3e2b1d08e3bc6b11b247e99959183
# good: [ca020fc189dc33d87b48b4233d557055fcd0a52a] source efbde08e2a9930edb4637824d9d3a768873314a8
git bisect good ca020fc189dc33d87b48b4233d557055fcd0a52a
# first bad commit: [f8251726edc3e2b1d08e3bc6b11b247e99959183] source c7e8f21a538c409abe70b90d7bba38386e90a876
Comment 3 Noel Grandin 2015-12-23 11:17:00 UTC
Created attachment 121516 [details]
potential fix

I tried all the way to your first good commit, but I cannot get this to work at all on my dev machine.

Could you try the attached patch and see if it fixes the problem for you?
Comment 4 Noel Grandin 2015-12-24 07:28:04 UTC
I've pushed a blind fix for this to master. Can you check the daily master build later, and if it works for you, I'll backport it.
Comment 5 Commit Notification 2015-12-24 07:30:30 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4dfba3b59021f55957fc486531f8fdc67cc307b0

tdf#96522 - [ANIMATION] Animation Spiral in does not work

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 raal 2015-12-29 11:40:01 UTC
(In reply to Noel Grandin from comment #4)
> I've pushed a blind fix for this to master. Can you check the daily master
> build later, and if it works for you, I'll backport it.

Tested with Version: 5.2.0.0.alpha0+
Build ID: 4c4f096a81e1643646f72cab17fb94610a346961
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-12-28_11:02:13

and bug still occurs -  no animation
Comment 7 Noel Grandin 2016-01-11 11:46:25 UTC
I finally managed to track this down.

It looks like the problem is caused by both my commit AND this commit:
e67a834 "Resolves: tdf#93994 flush API objects at load time"

Now that I have reverted the relevant portion of my commit on master, Armin, could you take a look at why your commit might cause this?
Comment 8 Armin Le Grand (collabora) 2016-01-11 15:20:17 UTC
Not sure, but when loading in older version I get a 'Form 1' as the name of the effect in the AnimationTab/Sidebar, when loading with current version there is a '-1' shown. Looks as if somehow the name matching is broken/missing...
Comment 9 Armin Le Grand (collabora) 2016-01-11 15:30:39 UTC
Tried to move the try..catch block from SdXMLDrawPageContext::EndElement() to ~SdXMLDrawPageContext, same effect. Does someone know more how and when at load time the animation effects are mapped to the shapes...?
Comment 10 Armin Le Grand (collabora) 2016-01-11 17:08:49 UTC
Looks as if resetting the UNO API object is too much here, the animation info mapping uses a weak-reference to the xSHape and gets lost. Checked that the original problem (the too many Outliners and VirtualDevices) are caused by the XCustomShapeEngine. Thus I tried to reset just that (mxCustomShapeEngine is a public member in SdrObjCustomShape, what..?) and it works. Tried loading the orig doc, looks good. Also the animated doc looks good. Will have to adapt that fix to this change:
in sd/source/ui/unoidl/unopage.cxx|627 'pCustomShape->setUnoShape(nullptr)' -> 'pCustomShape->mxCustomShapeEngine.set(nullptr)'...
Comment 11 Armin Le Grand (collabora) 2016-01-13 11:12:05 UTC
Added solution https://gerrit.libreoffice.org/21401 to gerrit
Comment 12 Armin Le Grand (collabora) 2016-01-14 08:28:58 UTC
*** Bug 96526 has been marked as a duplicate of this bug. ***
Comment 13 Armin Le Grand (collabora) 2016-01-14 08:29:00 UTC
*** Bug 96529 has been marked as a duplicate of this bug. ***
Comment 14 Armin Le Grand (collabora) 2016-01-14 08:29:02 UTC
*** Bug 96537 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2016-01-14 09:42:13 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50f024844b1e00249e638df6db029f09465c4c10

tdf#96522 reset CustomShapeEngine at import

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 raal 2016-01-15 07:10:50 UTC
*** Bug 96528 has been marked as a duplicate of this bug. ***
Comment 17 Commit Notification 2016-05-11 12:56:48 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27db0b033235bb5379b5af4f530413750bee9f29&h=libreoffice-5-1

tdf#96522 reset CustomShapeEngine at import

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Xisco Faulí 2016-09-15 20:52:47 UTC
Hi,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Regards