tdf#96522 - [ANIMATION] Animation Spiral in does not work

blind fix for this since I cannot seem to make it work on my dev box no
matter how far back I go.
This seems to be a regression from commit
c7e8f21a538c409abe70b90d7bba38386e90a876 "loplugin:unusedmethods"

Change-Id: I99f0f0ca662a5fe246057b1bb8da3bd3d3c7bac6
(cherry picked from commit 4dfba3b59021f55957fc486531f8fdc67cc307b0)